--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" href="./img/logoCoffe.jpg">
     <title>Vinalink Coffee</title>
 </head>
 
@@ -17,15 +18,30 @@
 
     <header>
         <div class="contenedor">
-            <nav class="menu">
-                <a href="#" id="btn-acerca-de">Home</a>
-                <a href="#" id="btn-menu">Menu</a>
-                <a href="#" id="btn-galeria">About</a>
-                <a href="#" id="btn-ubicacion">Contact</a>
+            <nav class="menu__header">
+                <li class="menu__item">
+                    <a href="#" class="menu__item-link" id="btn-acerca-de">Home</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__item-link" id="btn-menu">Menu</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__item-link" id="btn-galeria">About</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__item-link" id="btn-ubicacion">Contact</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#mapAddress" class="menu__item-link" id="mapAddress">Address</a>
+                </li>
+                <!-- <a href="#" class="menu__item-link" id="btn-acerca-de">Home</a>
+                <a href="#" class="menu__item-link" id="btn-menu">Menu</a>
+                <a href="#" class="menu__item-link" id="btn-galeria">About</a>
+                <a href="#" class="menu__item-link" id="btn-ubicacion">Contact</a> -->
             </nav>
 
             <div class="textos">
-                <h1 class="nombre">Vinalink <span>Coffee</span></h1>
+                <h1 class="nombre">VinaLink <span>Coffee</span></h1>
                 <h3>Bringing the best experience to you.</h3>
             </div>
         </div>
@@ -39,17 +55,20 @@
                     <img src="img/acerca-de.jpg" alt="">
                 </div>
                 <article>
-                    <h3>Acerca de</h3>
+                    <h3>VinaLink Coffee</h3>
                     <p>
-                        Dulce Paldar nace en el 2015 de un deseo por servir la mejor taza de café posible en un ambiente
-                        bonito y relajado. Nace del deseo por hacer comunidad, basada en un comercio justo y
-                        sustentable, cuidando cada uno de los detalles, desde el productor y el grano hasta el barista y
-                        la taza.
+                        <span class="article__name">VinaLink coffee</span>, thương hiệu cà phê đến từ Việt Nam được chế biến từ những hạt cà phê nguyên
+                        chất và hảo hạng trồng tại Tây Nguyên Việt Nam.
+                        Mang đến cho quý khách những trãi nghiệm về hương vị cà phê ngon nhất không đâu có được. Thương
+                        hiệu của chúng tôi
+                        tự hào là sản phẩm của người Việt mang đậm tinh thần và chất người Việt, gu cà phê nguyên chât cho
+                        cho bạn trải nghiệm cảm giác thăng hoa nhất.
                     </p>
                     <p>
-                        Amamos el buen café, y nos fascina lo que produce: las pláticas, las ideas, los lazos y los
-                        momentos. Buscamos conectar, crear y lograr. Queremos construir y ser parte del mundo en el que
-                        queremos vivir.
+                        
+                        <span>VinaLink Coffee</span> - Kết nối hương vị Việt.
+                        <br>
+                        <span>VinaLink Coffee</span> - Người Việt Nam "Chất".
                     </p>
                 </article>
             </div>
@@ -63,38 +82,37 @@
 
                         <article>
 
-                            <p class="categoria">De Comer</p>
+                            <p class="categoria">Coffee</p>
 
                             <div class="platillo">
-                                <p class="nombre">Hamburguesas</p>
-                                <p class="precio">$30</p>
+                                <p class="nombre">Epresso</p>
+                                <p class="precio">$3</p>
                                 <p class="descripcion">
-                                    De carne, pollo, doble carne y vegetariana.
+                                    Hạt cà phê nguyên chất, hương cam
                                 </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Sandwich</p>
-                                <p class="precio">$20</p>
+                                <p class="nombre">Coffe Latte</p>
+                                <p class="precio">$3</p>
                                 <p class="descripcion">
-                                    Suave y ligero de 3 quesos, crema, mozarella y americano, tomate cherry, suave jamon
-                                    y lechuga crespa.
+                                    kết hợp cà phê espresso với sữa nóng
                                 </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Croissant</p>
-                                <p class="precio">$24</p>
+                                <p class="nombre">Americano</p>
+                                <p class="precio">$3</p>
                                 <p class="descripcion">
-                                    Ranchero, hawaiano, queso, pollo y chocolate
+                                    Cà phê kèm đá
                                 </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Galletas</p>
-                                <p class="precio">$15</p>
+                                <p class="nombre">Cappuccino</p>
+                                <p class="precio">$3</p>
                                 <p class="descripcion">
-                                    Integrales, canela y mantequilla, chocolate y nueces.
+                                    Vị cappuccino được hình thành từ sự kết hợp của espresso, sữa nóng và bọt sữa.
                                 </p>
                             </div>
 
@@ -102,31 +120,39 @@
 
                         <article>
 
-                            <p class="categoria">De Tomar</p>
+                            <p class="categoria">Trà - Trà Sữa</p>
 
                             <div class="platillo">
-                                <p class="nombre">Té caliente</p>
-                                <p class="precio">$20</p>
-                                <p class="descripcion">Negro, hierbas, amaretto, menta y frutos</p>
+                                <p class="nombre">Green Tea</p>
+                                <p class="precio">$2</p>
+                                <p class="descripcion">
+                                    Trà xanh nguyên chất từ vùng đồi Hà Giang
+                                </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Cafe Americano</p>
-                                <p class="precio">$15</p>
-                                <p class="descripcion">Bebida con cafeína que se elabora mezclando un espresso prehecho
-                                    con agua.</p>
+                                <p class="nombre">Lemon Tea</p>
+                                <p class="precio">$2</p>
+                                <p class="descripcion">
+                                    Trà chanh hương chanh xã
+                                </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Capuccino</p>
-                                <p class="precio">$24</p>
-                                <p class="descripcion">Vainilla, chantilly, amaretto, balleys, balleys X2</p>
+                                <p class="nombre">Choco Milk</p>
+                                <p class="precio">$2.5</p>
+                                <p class="descripcion">
+                                    Hương trà, kèm sữa và socola Pháp
+                                </p>
                             </div>
 
                             <div class="platillo">
-                                <p class="nombre">Malteadas</p>
-                                <p class="precio">$35</p>
-                                <p class="descripcion">Fresa y vainilla, durazno, chocolate.</p>
+                                <p class="nombre">Thai Tea</p>
+                                <p class="precio">$2.5</p>
+                                <p class="descripcion">
+                                    Trà đen chất lượng cao, Sữa đặc đường tạo vị béo mịn và ngọt tự nhiên,
+                                    Đá viên (tùy chọn)
+                                </p>
                             </div>
 
                         </article>
@@ -165,37 +191,70 @@
 
         <section class="ubicacion" id="ubicacion">
             <div class="contenedor">
-                <h3 class="titulo">Ubicacion</h3>
+                <h3 class="titulo">Contact</h3>
                 <div class="direccion">
-                    <p class="calle">2915 Primrose Lane<br>Anaheim, CA 92806</p><br>
+                    <p class="calle">54 Nguyễn Lương Bằng<br>Hòa Khánh - Liên Chiểu - Đà Nẵng</p><br>
                     <p class="telefono">(503) 400-5479</p>
-                    <p class="correo">correo [arroba] tucorreo.com</p>
+                    <p class="correo">vinalink.com</p>
                 </div>
                 <div class="horarios">
-                    <h4>Horarios</h4>
-                    <p class="entre-semana">Lunes a Viernes <br>8:00am - 9:00pm</p>
-                    <p class="fin-semana">Sabados y Domingos <br>11:00am - 10:00pm</p>
+                    <h4>Open</h4>
+                    <p class="entre-semana">Monday - Friday <br>8:00 am - 9:00pm</p>
+                    <p class="fin-semana">Saturday - Sunday <br>7:00 am - 11:00 pm</p>
                 </div>
             </div>
         </section>
 
-        <section class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.837441717835!2d108.14731717608531!3d16.07392318460631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218d68dff9545%3A0x714561e9f3a7292c!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBCw6FjaCBLaG9hIC0gxJDhuqFpIGjhu41jIMSQw6AgTuG6tW5n!5e0!3m2!1svi!2s!4v1698910604360!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="mapa" id="mapAddress">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.837441717835!2d108.14731717608531!3d16.07392318460631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218d68dff9545%3A0x714561e9f3a7292c!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBCw6FjaCBLaG9hIC0gxJDhuqFpIGjhu41jIMSQw6AgTuG6tW5n!5e0!3m2!1svi!2s!4v1698910604360!5m2!1svi!2s"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-         </section>
+    </section>
 
     <footer>
-        <div class="contenedor">
-            <div class="copyright">
-                <p>Copyright Daniel Lozano @ 2022</p>
+        <div class="contenedor__footer">
+            <div class="footer-col">
+                <h3>About Member</h3>
+                <ul>
+                    <li>Nguyễn Trần Thảo Vy</li>
+                    <li>Đặng Thị Trúc Ni</li>
+                    <li>Đặng Quang Nhật Linh</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Services</h3>
+                <ul>
+                    <li>Mua tại cửa hàng</li>
+                    <li>Giao tận nơi</li>
+                    <li>Dùng tại quán</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Contact Us</h3>
+                <p>123 Main Street</p>
+                <p>Anytown, USA 12345</p>
+                <p>(123) 456-7890</p>
+            </div>
+            <div class="footer-col">
+                <h3>Follow Us</h3>
+                <ul>
+                    <li><a href="https://www.facebook.com/profile.php?id=61552746433167">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
             </div>
         </div>
     </footer>
+    <div class="copyright">
+        <p>2023 Bản quyền thuộc về VinaLink Coffee</p>
+    </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/efectos.js"></script>
-    <script src="js/parallax.js"></script>
-
+    
 </body>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/efectos.js"></script>
+<script src="js/parallax.js"></script>
 </html>
