--- a/index.html
+++ b/index.html
@@ -18,26 +18,12 @@
 
     <header>
         <div class="contenedor">
-            <nav class="menu__header">
-                <li class="menu__item">
-                    <a href="#" class="menu__item-link" id="btn-acerca-de">Home</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__item-link" id="btn-menu">Menu</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__item-link" id="btn-galeria">About</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__item-link" id="btn-ubicacion">Contact</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#mapAddress" class="menu__item-link" id="mapAddress">Address</a>
-                </li>
-                <!-- <a href="#" class="menu__item-link" id="btn-acerca-de">Home</a>
-                <a href="#" class="menu__item-link" id="btn-menu">Menu</a>
-                <a href="#" class="menu__item-link" id="btn-galeria">About</a>
-                <a href="#" class="menu__item-link" id="btn-ubicacion">Contact</a> -->
+            <nav class="menu">
+                <a href="#" id="btn-acerca-de">Home</a>
+                <a href="#" id="btn-menu">Menu</a>
+                <a href="#" id="btn-galeria">About</a>
+                <a href="#" id="btn-ubicacion">Contact</a>
+                <a href="#mapAddress">Address</a>
             </nav>
 
             <div class="textos">
