--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <p>
                         <span class="article__name">VinaLink coffee</span>, thương hiệu cà phê đến từ Việt Nam được chế biến từ những hạt cà phê nguyên
                         chất và hảo hạng trồng tại Tây Nguyên Việt Nam.
-                        Mang đến cho quý khách những trãi nghiệm về hương vị cà phê ngon nhất không đâu có được. Thương
+                        Mang đến cho quý khách những trải nghiệm về hương vị cà phê ngon nhất không đâu có được. Thương
                         hiệu của chúng tôi
-                        tự hào là sản phẩm của người Việt mang đậm tinh thần và chất người Việt, gu cà phê nguyên chât cho
+                        tự hào là sản phẩm của người Việt mang đậm tinh thần và chất người Việt, gu cà phê nguyên chất cho
                         cho bạn trải nghiệm cảm giác thăng hoa nhất.
                     </p>
                     <p>
